<resources>
    <string name="app_name">MovieLib</string>
    <string name="placeholder_image">Placeholder Image</string>
    <string name="movie_image_content_description">Movie Image</string>
    <string name="tools_title">TITLE</string>
    <string name="tools_subtitle">SUBTITLE</string>
    <string name="please_register_toast">Please register first to log in</string>
    <string name="not_allowed_tmdb_toast">You have not allowed the TMDB. Please register again to log in.</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_movies">MoviesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="no_movies_available">No movies available</string>
    <string name="no_movies_available_empty">No movies available…</string>
    <string name="no_network_available">Oops!! No network available…</string>
    <string name="server_down">Oops!! Server is down…</string>
    <string name="server_invalid">Oops!! Server is not returning data…</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="action_share">Share</string>
    <string name="backdrop_movie_image">Backdrop movie image</string>
    <string name="release_date">Release Date</string>
    <string name="user_rating">User Rating</string>
    <string name="genre">Genre</string>
    <string name="plot">Plot</string>
    <string name="not_yet_rated">Not yet rated</string>
    <string name="cast">Cast</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cast_not_available">Cast not available</string>
    <string name="trailer_image">Trailer Image</string>
    <string name="trailers_not_available">Trailers not available</string>
    <string name="read_more">Read more</string>
    <string name="reviews_not_available">Reviews not available</string>
    <string name="favourites_removed">Removed from Favourites</string>
    <string name="favourites_added">Added to Favourites</string>
    <string name="no_favourites_yet">No favourites yet</string>
    <string name="go_back_and_add_some_favourites_for_offline_access">Go back and add some Favourites\nfor offline access.</string>
    <string name="use_the_search_bar_to_search_for_movies">Use the search bar to search for movies.</string>
    <string name="no_search_items">No search items</string>
    <string name="register_first_and_nthen_sign_in_to_enjoy">Register first and\nthen sign in to enjoy.</string>
    <string name="app_image_content_descrptn">App Image</string>
    <string name="widget_movie_img_content_description">Movie Image</string>
    <string name="adding_to_favourites_dilog">Adding to favourites…</string>
    <string name="removing_from_favourites_dilog">Removing from favourites…</string>
    <string name="share_release">"Release: "</string>
    <string name="share_user_rating">"User Rating: : "</string>
    <string name="share_cbfc_rating">"CBFC Rating: : "</string>
    <string name="share_plot">"Plot: "</string>
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Family</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_foreign">Foreign</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_music">Music</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_tv_movie">Tv Movie</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">War</string>
    <string name="genre_western">Western</string>
    <string name="popular_tab">POPULAR</string>
    <string name="upcoming_tab">UPCOMING</string>
    <string name="favourites_tab">FAVOURITES</string>
    <string name="search_tab">SEARCH</string>
    <string name="detail_general_tab">GENERAL</string>
    <string name="detail_cast_tab">CAST</string>
    <string name="detail_trailers_tab">TRAILERS</string>
    <string name="detail_reviews_tab">REVIEWS</string>
</resources>
