<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.jainsaab.movielib.SignInActivity">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:contentDescription="@string/app_image_content_descrptn"
            android:layout_marginBottom="@dimen/sign_in_image_btm_margin"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center"
            android:layout_width="@dimen/sign_in_img_size"
            android:layout_height="@dimen/sign_in_img_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:gravity="center"
            android:textSize="@dimen/sign_in_descrptn_text_size"
            android:text="@string/register_first_and_nthen_sign_in_to_enjoy"
            android:textColor="@color/primaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:layout_weight="1"
            android:id="@+id/register"
            android:text="@string/register"
            android:background="@drawable/button_round_shape"
            android:layout_margin="@dimen/register_btn_margin"
            android:textSize="@dimen/register_text_size"
            android:layout_width="0dp"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content" />

        <Button
            android:background="@drawable/button_round_shape"
            android:layout_margin="@dimen/sign_in_btn_margin"
            android:layout_weight="1"
            android:id="@+id/log_in"
            android:textColor="@android:color/white"
            android:text="@string/log_in"
            android:textSize="@dimen/register_text_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>
