<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/movie_item_card"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_height="@dimen/movie_card_height"
    card_view:cardCornerRadius="@dimen/movie_card_corner_radius"
    card_view:cardElevation="@dimen/movie_card_elevation"
    card_view:cardBackgroundColor="@android:color/white"
    card_view:cardUseCompatPadding="true">

    <ImageView
        android:contentDescription="@string/placeholder_image"
        android:layout_gravity="top|center"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/place_holder_image_height"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_placeholder"/>

    <ImageView
        android:transitionName="poster_transition"
        android:contentDescription="@string/movie_image_content_description"
        android:layout_gravity="top"
        android:id="@+id/movie_image"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="@dimen/place_holder_image_height" />

    <LinearLayout
        android:paddingTop="@dimen/movie_item_text_box_padding_top"
        android:paddingBottom="@dimen/movie_item_text_box_padding_bottom"
        android:paddingEnd="@dimen/movie_item_text_box_padding_lr"
        android:paddingStart="@dimen/movie_item_text_box_padding_lr"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/movie_item_text_box_height">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/movie_title"
            android:maxLines="2"
            android:textColor="@color/primaryText"
            android:textSize="@dimen/title_text_size"
            tools:text="@string/tools_title"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/subtitle"
            android:textSize="@dimen/subtitles_text_size"
            tools:text="@string/tools_subtitle"
            android:textColor="@color/secondaryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/cbfc_rating"
            android:textColor="@color/primaryText"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:textSize="@dimen/title_text_size"
            tools:text="U/A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.v7.widget.CardView>