<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/widget_list_item"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/movie_image_content_description"
            android:layout_gravity="top"
            android:id="@+id/movie_image"
            android:scaleType="fitXY"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_list_item_ht" />

        <LinearLayout
            android:paddingTop="@dimen/widget_text_box_padding_top"
            android:paddingBottom="@dimen/movie_item_text_box_padding_bottom"
            android:paddingEnd="@dimen/movie_item_text_box_padding_lr"
            android:paddingStart="@dimen/movie_item_text_box_padding_lr"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/widget_text_box_ht">

            <TextView
                android:id="@+id/movie_title"
                android:maxLines="2"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/widget_title_size"
                tools:text="@string/tools_title"
                android:ellipsize="end"
                android:scrollHorizontally="true"
                android:lines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/subtitle"
                android:textSize="@dimen/widget_subtitle_size"
                tools:text="@string/tools_subtitle"
                android:textColor="@color/secondaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/cbfc_rating"
                android:textColor="@color/primaryText"
                android:textStyle="bold"
                android:layout_gravity="end"
                android:textSize="@dimen/widget_cbfc_size"
                tools:text="U/A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>