<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jainsaab.movielib.DetailsActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/detail_card_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_view_margin"
            android:elevation="@dimen/cardview_default_elevation"
            android:focusableInTouchMode="true"
            app:cardCornerRadius="@dimen/cardview_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/detail_poster"
                    android:layout_width="@dimen/detail_poster_width"
                    android:layout_height="@dimen/detail_poster_height"
                    android:layout_margin="@dimen/detail_poster_margin"
                    android:contentDescription="@string/movie_image_content_description"
                    android:scaleType="fitXY"
                    android:transitionName="poster_transition" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/detail_linear_layout_margin"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/release_date_heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/detail_text_view_heading_margin"
                        android:layout_marginTop="@dimen/detail_text_view_heading_margin"
                        android:text="@string/release_date"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/detail_text_view_heading_text_size" />

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/detail_text_view_normal_margin"
                        android:paddingEnd="@dimen/detail_text_view_normal_padding"
                        android:paddingStart="@dimen/detail_text_view_normal_padding"
                        android:textColor="@color/primaryText"
                        android:textSize="@dimen/detail_text_view_normal_text_size" />

                    <TextView
                        android:id="@+id/user_rating_heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/detail_text_view_heading_margin"
                        android:text="@string/user_rating"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/detail_text_view_heading_text_size" />

                    <TextView
                        android:id="@+id/user_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/detail_text_view_normal_margin"
                        android:paddingEnd="@dimen/detail_text_view_normal_padding"
                        android:paddingStart="@dimen/detail_text_view_normal_padding"
                        android:textColor="@color/primaryText"
                        android:textSize="@dimen/detail_text_view_normal_text_size" />

                    <TextView
                        android:id="@+id/genre_heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/detail_text_view_heading_margin"
                        android:text="@string/genre"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/detail_text_view_heading_text_size" />

                    <TextView
                        android:id="@+id/genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/detail_text_view_normal_margin"
                        android:paddingEnd="@dimen/detail_text_view_normal_padding"
                        android:paddingStart="@dimen/detail_text_view_normal_padding"
                        android:textColor="@color/primaryText"
                        android:textSize="@dimen/detail_genre_normal_text_size" />
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/detail_card_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_view_margin"
            android:layout_marginStart="@dimen/card_view_margin"
            android:layout_marginEnd="@dimen/card_view_margin"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="@dimen/cardview_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/plot_heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/detail_plot_heading_margin"
                    android:text="@string/plot"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/detail_text_view_heading_text_size" />

                <TextView
                    android:id="@+id/overview_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/detail_text_view_normal_padding"
                    android:textColor="@color/primaryText"
                    android:textSize="@dimen/detail_text_view_normal_text_size" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
